Bug #58657 --> destroy the event queue when we are done with it sr=bienvenu r=sspitzer