mailnews/imap/src/nsImapProtocol.cpp
@@ -689,6 +689,8 @@ NS_IMETHODIMP nsImapProtocol::Run()
     // call the platform specific main loop ....
     me->ImapThreadMainLoop();
 
+    me->m_eventQueue->StopAcceptingEvents();
+    me->m_eventQueue->ProcessPendingEvents();
     me->m_eventQueue = null_nsCOMPtr();
 
     nsCOMPtr<nsIMsgIncomingServer> me_server = do_QueryReferent(m_server);
@@ -720,6 +722,8 @@ NS_IMETHODIMP nsImapProtocol::Run()
     me->m_imapMessageSink = null_nsCOMPtr();
     me->m_imapMiscellaneousSink = null_nsCOMPtr();
     m_iThread = null_nsCOMPtr();
+
+    result = pEventQService->DestroyThreadEventQueue(); 
     return NS_OK;
 }
 
